--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,12 @@
             "homepage": "https://github.com/konnekto/laravel-subscriptions/contributors"
         }
     ],
+    "repositories": [
+        {
+          "type": "vcs",
+          "url": "https://github.com/laravel-shift/uniquewith-validator.git"
+        }
+    ],
     "require": {
         "php": "^8.0.0",
         "illuminate/console": "^9.0.0 || ^10.0.0",
