--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
         "illuminate/console": "^9.0.0 || ^10.0.0",
         "illuminate/database": "^9.0.0 || ^10.0.0",
         "illuminate/support": "^9.0.0 || ^10.0.0",
-        "rinvex/laravel-support": "^6.1",
+        "rinvex/laravel-support": "^6.1 || ^7.0",
         "spatie/eloquent-sortable": "^4.0",
         "spatie/laravel-sluggable": "^3.4",
         "spatie/laravel-translatable": "^6.1"
